# projects_fastapi

./: .env.example  README.md  docker-compose.yaml  pyproject.toml
alembic/: env.py
alembic/versions/: 2024-05-12_final.py
src/: api.py  main.py
src/core/: alembic.py  config.py  database.py  exceptions.py  models.py  redis.py  schemas.py  service.py
src/groups/: constants.py  dependencies.py  exceptions.py  models.py  router.py  schemas.py  services.py  utils.py
src/partisipants/: dependencies.py  exceptions.py  models.py  router.py  schemas.py  service.py
src/projects/: dependencies.py  enums.py  exceptions.py  models.py  router.py  schemas.py  services.py
src/requests/: dependencies.py  enums.py  exceptions.py  models.py  router.py  schemas.py  service.py
src/users/: dependencies.py  exceptions.py  models.py  router.py  schemas.py  service.py  utils.py
