[tool.poetry]
name = "projects-fastapi"
version = "0.1.0"
description = ""
authors = ["Mikhail Kochurov <firepanda70@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
asyncpg = "^0.29.0"
sqlalchemy = "^2.0.30"
alembic = "^1.13.1"
pydantic = "^2.7.1"
pydantic-settings = "^2.2.1"
redis = "^5.0.4"
pwdlib = {extras = ["argon2", "bcrypt"], version = "^0.2.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
